<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/backroundGrey"
        tools:context="com.leaf.clips.presenter.DeveloperUnlockerActivity"
        android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/developer_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_code"
                    android:imeActionId="@+id/login"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:fontFamily="sans-serif"
                    android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <Button
                android:id="@+id/developer_login_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_login"
                android:textStyle="bold" android:layout_alignParentEnd="false"
                android:layout_centerHorizontal="true" android:layout_below="@+id/text_input_layout"/>

</RelativeLayout>
