<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
                android:id="@+id/settings"
                android:icon="@drawable/icon_setting"
                android:title="@string/title_activity_preferences"/>
        <item
                android:id="@+id/mapManager"
                android:icon="@drawable/ic_map_black_24dp"
                android:title="@string/title_activity_local_map"/>
        <item
                android:id="@+id/help"
                android:icon="@drawable/icon_help"
                android:title="@string/help"/>
        <item
                android:id="@+id/nav_developer"
                android:icon="@drawable/icon_menu_developer"
                android:title="@string/menu_developer"/>
    </group>

</menu>
