...
    <string name="action_login">Login</string>
    <string name="title_activity_main_developer">Your logs</string>
    <string name="action_beacon_power_area">Beacon Power Area</string>
    <string name="title_activity_logging">New log</string>
    <string name="title_activity_beacon_power_area">Beacon Power Area</string>
    <string name="dialog_title_dev_code_error">Sorry!</string>
    <string name="dialog_dev_code_error">Wrong code.</string>
    <string name="dialog_title_not_updated_map">Do you want to update map?</string>
    <string name="dialog_not_updated_map">It seems that your map for this building isn\'t up to
        date.An updated map is needed to use the navigation functionality of this app.
    </string>
    <string name="dialog_title_map_not_found">Download map?</string>
    <string name="dialog_map_not_found">It seems that you haven\'t the map for the current building.
...
    </string>
    <string name="dialog_title_connection_not_enabled">Enable Wi-Fi?</string>
    <string name="dialog_connection_not_enabled">Wi-Fi is needed to use the
        navigation functionality of this app.
    </string>
    <string name="dialog_title_no_beacon_seen">No beacon seen</string>
    <string name="ok" translatable="false">@android:string/ok</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="title_activity_nearby_poi">Nearby</string>
    <string name="title_activity_log_information">Log Details</string>
    <string name="search_hint">Search inside the building</string>
    <string name="title_activity_navigation">Instructions</string>
    <string name="no_result_found">No result found</string>
...
